--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -21,7 +21,7 @@
 </div>
 <div class="container">
   <h2>Informações:</h2>
-  <table class="table">
+  <table class="table" fixed-header table-height="50px">
     <thead>
       <tr class="info">
         <th>Nome de Evento</th>
