Ajuste : Nav e footer

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -2,7 +2,7 @@
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
-
+<div style="position:relative;transform: translate(0%, 30%); background-color:#eee" >
 <footer class="row">
 <div class="col-md-6">
 <img src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
@@ -17,9 +17,9 @@ CEP.: 63010-465</p>
       <p><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
 
 </div>
-
+<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 </footer>
 
-<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 
+</div>
 </body>
