--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -7,34 +7,34 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-                <a class="navbar-brand" href="#!/home/" style="color:yellow">Ponto Dinâmico</a>
+                <a class="navbar-brand" href="#!/home/" style="color:white">Ponto Dinâmico</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#!/home/" style="background-color:white;color:blue">Home</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:yellow">Relatório <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white">Relatório <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a href="#!/relatorioUser" style="color:yellow">Usuários</a></li>
-                            <li><a href="#!/relatorioEvento" style="color:yellow">Eventos</a></li>
+                            <li><a href="#!/relatorioUser" >Usuários</a></li>
+                            <li><a href="#!/relatorioEvento" >Eventos</a></li>
 
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:yellow">Usuário <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white">Usuário <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a href="#!/cadastrarUser/" style="color:yellow">cadastrarUser</a></li>
-                            <li><a href="#" style="color:yellow">Edicaouser</a></li>
+                            <li><a href="#!/cadastrarUser/" >cadastrarUser</a></li>
+                            <li><a href="#" >Edicaouser</a></li>
 
                         </ul>
                     </li>
-                    <li><a href="#!/cadastrarEvento/" style="color:yellow">cadastrarEvento</a></li>
+                    <li><a href="#!/cadastrarEvento/" style="color:white">cadastrarEvento</a></li>
                     <li><a href="#!/listaUser/">Listar</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"style="color:yellow"></span> Sign Up</a></li>
-                    <li><a href="#!/login/"><span class="glyphicon glyphicon-log-in"style="color:yellow"></span> Login</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-user"style="color:white"></span> Sign Up</a></li>
+                    <li><a href="#!/login/"><span class="glyphicon glyphicon-log-in"style="color:white"></span> Login</a></li>
                 </ul>
             </div>
         </div>
