--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -1,8 +1,10 @@
 <button ng-click="vm.teste()">teste</button>
-
+<div class="row">
+  <div class="col-xs-12">
+	  
 <div class="container " style="position:relative;transform: translate(0%, 15%); width:30%;top:25%; background-color:	#fafafa">
 	
-    <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+    <img ng-src="/assets/logotipo-nexti.png" class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
  
 	<div class="box-parent-login ">
 		<div class="well bg-white box-login">
@@ -45,4 +47,6 @@
 			</form>
 		</div>
 	</div>
+</div>
+</div>
 </div>
