--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,11 +1,19 @@
 <body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%'>
+ <link rel="shortcut icon" type="image/x-icon" href="/home/nexti/Documentos/git/Ponto-Dinamico/app/assets/images/favicon.ico" />
+ 
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
 <div style="position:relative;transform: translate(0%, 30%); background-color:#eee" >
 <footer class="row">
 <div class="col-md-6">
-<img src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+<img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+<br>
+<br>
+<br>
+<br>
+
+<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 </div>
 <div class="col-md-6">
 <h2>Contato</h2>
@@ -17,7 +25,7 @@ CEP.: 63010-465</p>
       <p><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
 
 </div>
-<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
+
 </footer>
 
 
