falta integrar lista de evento, refatorar e testar

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -68,10 +68,10 @@
     </div>
 
     <label for="latitude"> <h4>Latitude</h4> </label>
-    <input class="form-control" type="text" ng-model="vm.latitude" disabled> <br>
+    <input class="form-control" type="text" ng-model="vm.latitude"> <br>
 
     <label for="longitude"> <h4>Longitude</h4></label>
-    <input class="form-control" type="text" ng-model="vm.longitude" disabled> <br>
+    <input class="form-control" type="text" ng-model="vm.longitude"> <br>
 
     <br>
     <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7">OK</button>
