--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -32,7 +32,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white">Evento <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
                             <li><a href="#!/cadastrarEvento/" >Cadastrar Evento</a></li>
-                            <li><a href="#" >Editar Evento</a></li>
+                            <li><a href="#!/editEvento/" >Editar Evento</a></li>
 
                         </ul>
                     </li>
