--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="background-color:#e3f2fd ">
   <div class="row">
     <br>
     <br>
@@ -22,7 +22,7 @@
     </form>
   </div>
 </div>
-<div class="container">
+<div class="container" >
   <h2>Resultado</h2>
   <p>Informações :</p>
   <table class="table">
