edit evento pegando

--- a/app/assets/javascripts/views/cadastroUser/cadastroUser.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroUser.html
@@ -54,7 +54,7 @@
 			</div>
 		</form>
 		<div style="text-align-last: right">
-			<button class="btn btn-primary" ng-click="vm.cadastrarUsuario()">Cadastrar-se</button>
+			<button class="btn btn-primary" ng-click="vm.editarUser()">Cadastrar-se</button>
 		</div>
 	</div>
 </div>
