--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -5,18 +5,15 @@
     <form name="vm.form" class="form-horizontal">
       <div class="form-group">
         <div class="col-xs-9">
-          <input type="text" class="form-control" ng-model="vm.search" placeholder="Nome ou Data">
+          <input type="text" class="form-control" ng-change="vm.buscar()" ng-model="vm.busca" placeholder="Nome ou Data">
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-                <input type="radio" name="busc" ng-model="vm.radio" value="nome" checked='checked'> Nome do evento
+                <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome" checked='checked'> Nome do evento
             </label>
           <label class="radio-inline">
-                <input type="radio" name ="busc" ng-model="vm.radio" value="matricula"> Data
+                <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="data"> Data
             </label>
-        </div>
-        <div class="col-xs-2">
-          <button type="button" class="btn btn-primary" ng-click="vm.buscar()">Buscar</button>
         </div>
       </div>
     </form>
@@ -25,10 +22,10 @@
 <div class="container">
   <h2>Resultado</h2>
   <p>Informações :</p>
-  <table class="table" fixed-header table-height="50px">
+  <table class="table" fixed-header table-height="55px">
     <thead>
       <tr class="info">
-        <th type="date">Data</th>
+        <th>Data</th>
         <th>Nome do evento</th>
         <th> </th>
         <th></th>
@@ -37,14 +34,29 @@
     </thead>
     <tbody>
       <div>
-        <tr ng-repeat="evento in vm.eventos">
+        <tr class="active" ng-repeat="evento in vm.eventos | filter:vm.filtro:strict">
+          <td>{{evento.data_inicio | date:"dd/MM/yyyy"}}</td>
           <td>{{evento.nome}}</td>
           <td><a ui-sref="editEvento({evento: evento})" type="button" class="btn btn-primary" style="color:white">editar</a>            </td>
           <td><a href="" type="button" class="btn btn-primary" style="color:white">informações</a></td>
-          <td><a href="" type="button" class="btn btn-primary" style="color:white">relatório</a></td>
+          <td><a ng-click="vm.relatorio(evento.id)" type="button" class="btn btn-primary" style="color:white">relatório</a></td>
         </tr>
       </div>
     </tbody>
   </table>
-
+  <h2>Detalhes</h2>
+  <table class="table" fixed-header table-height="100px">
+    <thead>
+      <tr class="info">
+        <th>Nome:</th>
+        <th>Presenças:</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="active" ng-repeat="user in vm.users">
+        <td>{{user.nome}}</td>
+        <td>{{user.presenca}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
