--- a/app/assets/javascripts/views/edituser/edituser.html
+++ b/app/assets/javascripts/views/edituser/edituser.html
@@ -2,49 +2,33 @@
 	<div class="form-group form-group-sm">
 		<form name="vm.form">
 			<div style="text-align: center; font-family: inherit;">
-				<h2 style="color:black">Editar<small><br><div style="color:black">(Edite os campos abaixo)</div></small> </h2>
+				<h2 style="color:black">Editar<small><br><div style="color:black">(Campos em branco não serão modificados)</div></small> </h2>
 			</div>
 
 			<div class="form-group form-group-sm">
-				<label class="col-sm-8 control-label" for="formGroupInputSmall">Escolha uma senha</label>
-				<input class="form-control" type="password" name="senha" placeholder="Senha" ng-model="vm.senha" ng-minlength="5" required><br>
-			</div>
-			<div role="alert">
-				<span class="error" ng-show="vm.form.senha.$dirty && vm.form.senha.$error.required">
-					(Campo obrigatório)</span>
-				<span class="error" ng-show="vm.form.senha.$dirty && vm.form.senha.$error.minlength">
-					A senha deve conter no mínimo 5 caracteres</span>
+				<label class="col-sm-8 control-label" for="formGroupInputSmall">Nova senha</label>
+				<input class="form-control" type="password" name="senha" placeholder="Senha" ng-model="vm.user.password"><br>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-6 control-label" for="formGroupInputSmall">Confirmar senha</label>
 				<input class="form-control" type="password" name="confirmaSenha" placeholder="Confirmar Senha" ng-model="vm.confirmaSenha"
-				 ng-minlength="6" required ng-pattern="{{vm.senha}}"><br>
+				 ng-pattern="{{vm.user.password}}"><br>
 			</div>
 			<div role="alert">
-				<span class="error" ng-show="vm.form.confirmaSenha.$dirty && vm.form.confirmaSenha.$error.required">
-					(Campo obrigatório)</span>
 				<span class="error" ng-show="vm.form.confirmaSenha.$dirty && vm.form.confirmaSenha.$error.pattern">
 					As senhas não correspondem</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-10 control-label" for="formGroupInputSmall">Número MAC</label>
-				<input class="form-control" name="MAC" type="text" placeholder="Matricula" ng-model="vm.matricula" required><br>
-			</div>
-			<div role="alert">
-				<span class="error" ng-show="vm.form.matricula.$dirty && vm.form.matricula.$error.required">
-       			(Campo obrigatório)</span>
+				<input class="form-control" name="mac" type="text" placeholder="MAC" ng-model="vm.user.mac"><br>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-5 control-label" for="formGroupInputSmall">E-mail</label>
-				<input class="form-control" name="imei" type="email" placeholder="E-mail" ng-model="vm.email" required><br>
-			</div>
-			<div role="alert">
-				<span class="error" ng-show="vm.form.imei.$dirty && vm.form.imei.$error.required">
-       			(Campo obrigatório)</span>
+				<input class="form-control" name="imei" type="email" placeholder="E-mail" ng-model="vm.user.email"><br>
 			</div>
 		</form>
 		<div style="text-align-last: right">
-			<button class="btn btn-primary" ng-click="vm.cadastrarUsuario()">Editar</button>
+			<button class="btn btn-primary" ng-click="vm.editarUser()">Editar</button>
 		</div>
 	</div>
 </div>
