--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -5,14 +5,14 @@
     <form name="vm.form" class="form-horizontal">
       <div class="form-group">
         <div class="col-xs-9">
-          <input type="text" class="form-control" ng-change="vm.buscar()" ng-model="vm.search" placeholder="Nome ou Número de Matrícula">
+          <input type="text" class="form-control" ng-change="vm.buscar()" ng-model="vm.busca" placeholder="Nome ou Número de Matrícula">
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-                <input type="radio" name="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="nome" checked='checked'> Nome
+                <input type="radio" name="busc" ng-change="vm.busca=''; vm.buscar()" ng-model="vm.radio" value="nome" checked='checked'> Nome
             </label>
           <label class="radio-inline">
-                <input type="radio" name ="busc" ng-change="vm.busca=''" ng-model="vm.radio" value="matricula"> Número da matrícula
+                <input type="radio" name ="busc" ng-change="vm.busca=''; vm.buscar()" ng-model="vm.radio" value="matricula"> Número da matrícula
             </label>
         </div>
       </div>
@@ -33,7 +33,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="user in vm.users | filter:vm.filtro:strict">
+      <tr class="active" ng-repeat="user in vm.users | filter:vm.filtro:strict">
         <td>{{user.matricula}}</td>
         <td>{{user.nome}}</td>
         <td><a ui-sref="editUser({user: user})" type="button" class="btn btn-primary" style="color:white">editar</a> </td>
@@ -42,7 +42,8 @@
       </tr>
     </tbody>
   </table>
-  <div class="container" style="position:relative;transform: translate(-7%, 15%);width:90%">
+  <div class="container">
+    <!--<div class="container" style="position:relative;transform: translate(-7%, 15%);width:90%">-->
     <h2>Relatório:</h2>
 
     <table class="table" fixed-header table-height="100px">
@@ -51,6 +52,8 @@
           <th>nome</th>
           <th>Data Início</th>
           <th>Data Fim</th>
+          <th>
+            <th>
         </tr>
       </thead>
       <tbody>
@@ -64,7 +67,10 @@
 
       </tbody>
     </table>
+  </div>
 
+  <div class="container">
+    <h2>Pontos:</h2>
     <table class="table" fixed-header table-height="100px">
       <thead>
         <tr class="info">
@@ -80,8 +86,11 @@
           <td>{{ponto.data | date:"dd/MM/yyyy"}}</td>
           <td>{{ponto.hora_inicio}}</td>
           <td>{{ponto.hora_fim}}</td>
+          <td></td>
         </tr>
       </tbody>
-
+    </table>
   </div>
+
+</div>
 </div>
