--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -30,13 +30,14 @@
       <tr class="info">
         <th>NúmeroM</th>
         <th>Nome</th>
+        <th>Matricula</th>
       </tr>
     </thead>
     <tbody>
       <div ng-repeat="user in vm.users">
         <tr>
           <td>{{user.id}}</td>
-          <td>{{user.nome>></td>
+          <td>{{user.nome}}</td>
           <td>{{user.matricula}}</td>
         </tr>
       </div>
