--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -5,7 +5,7 @@
 
 
 
-<div class="jumbotron text-center" style="font-family:roboto">
+<div class="jumbotron text-center" style="font-family:roboto;background-color:#d9edf7;width:105.9%;transform: translate(-3%, 0%)">
   <h1>Ponto Dinâmico</h1>
   <p style="font-family:roboto">Seja bem-vindo ao Ponto Dinâmico</p> 
 </div>
