--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -4,8 +4,10 @@
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
-<div style="position:relative;transform: translate(0%, 30%); background-color:#eee" >
-<footer class="row">
+<footer class="footer">
+<div class="footer-content">
+<div class="container" style="background-color:#eee;width:105.9%;transform: translate(-3%, 11%)" >
+<div class="row" >
 <div class="col-md-6">
 <img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
 <br>
@@ -13,7 +15,7 @@
 <br>
 <br>
 
-<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
+<small><h6 > © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 </div>
 <div class="col-md-6">
 <h2>Contato</h2>
@@ -25,9 +27,8 @@ CEP.: 63010-465</p>
       <p><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
 
 </div>
-
-</footer>
-
-
 </div>
+</div>
+</div>
+</footer>
 </body>
