Ajustes na homepage
Adição de logo no diretorio imagens e mudança na aparecencia da home

--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -5,9 +5,11 @@
 
 
 
-<div class="jumbotron text-center" style="font-family:roboto;background-color:#d9edf7;width:105.9%;transform: translate(-3%, 0%)">
-  <h1>Ponto Dinâmico</h1>
-  <p style="font-family:roboto">Seja bem-vindo ao Ponto Dinâmico</p> 
+<div class="jumbotron text-center" style="font-family:roboto;background-color:#d9edf7;width:105.9%;transform: translate(-3%, 0%);background-image: url(/assets/logo3.png);">
+  <h1> <kbd> Ponto Dinâmico </kbd></h1>
+
+  
+   <p style="font-family:roboto"> <kbd>Seja bem-vindo ao Ponto Dinâmico </kbd></p> 
 </div>
 
 <div class="container">
