--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -32,7 +32,7 @@ p, ol, ul, td {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-                <a class="navbar-brand" href="#!/home/" style="color:white">Ponto Dinâmico</a>
+                <a class="navbar-brand pull-right" href="#!/home/" style="color:white"> Ponto Dinâmico</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
