--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -4,9 +4,9 @@
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
-<footer class="footer">
+<footer class="footer-responsive">
 <div class="footer-content">
-<div class="container" style="background-color:#eee;width:105.9%;transform: translate(-3%, 11%)" >
+<div class="container" style="background-color:#eee;width:105.9%;transform: translate(-3%, 10%)" >
 <div class="row" >
 <div class="col-md-6">
 <img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
@@ -15,7 +15,7 @@
 <br>
 <br>
 
-<small><h6 > © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
+<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 </div>
 <div class="col-md-6">
 <h2>Contato</h2>
