--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -5,7 +5,7 @@
 
 
 
-<div class="jumbotron text-center" style="font-family:roboto;background-color:#d9edf7;width:105.9%;transform: translate(-3%, 0%);background-image: url(/assets/logo3.png);">
+<div class="jumbotron text-center" style="font-family:roboto;width:105.9%;transform: translate(-3%, 0%);background-image: url(/assets/logo3.png);">
   <h1> <kbd> Ponto Dinâmico </kbd></h1>
 
   
@@ -15,24 +15,24 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
-    <li class="list-group-item list-group-item-info">Cadastros</li>
-    <a href="#!/cadastrarEvento/" class="list-group-item">Cadastrar evento</a>
-    <a href="#!/cadastrarUser/" class="list-group-item">Cadastrar perfil do usuário</a>
-     <a href="#" class="list-group-item">Gerar Qrcode </a>
+      <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+    <li class="list-group-item list-group-item-info"style="font-size:150%;font-family:Ubuntu;color:Black">Cadastros</li>
+    <a href="#!/cadastrarEvento/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Cadastrar evento</a>
+    <a href="#!/cadastrarUser/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Cadastrar perfil do usuário</a>
+     <a href="#" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Gerar Qrcode </a>
     </div>
     </div>
     <div class="col-sm-4">
-      <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
-   <li class="list-group-item list-group-item-info">Relatórios</li>
-    <a href="#!/listaUser/" class="list-group-item">Relatório por usuário</a>
-    <a href="#!/listaEvento/" class="list-group-item">Relatório por eventos</a>
+      <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+   <li class="list-group-item list-group-item-info" style="font-size:150%;font-family:Ubuntu;color:Black">Relatórios</li>
+    <a href="#!/listaUser/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por usuário</a>
+    <a href="#!/listaEvento/" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Relatório por eventos</a>
     </div>
     </div>
     <div class="col-sm-4">
-     <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
-   <li class="list-group-item list-group-item-info">Edição</li>
-    <a href="#" class="list-group-item">Editar usuário</a>
+     <div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+   <li class="list-group-item list-group-item-info"style="font-size:150%;font-family:Ubuntu;color:Black">Edição</li>
+    <a href="#" class="list-group-item"style="font-size:120%;font-family:Ubuntu;color:Black">Editar usuário</a>
     </div>
     </div>
   </div>
