--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -15,16 +15,16 @@
 <br>
 <br>
 
-<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
+<small><h6><center> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</center></h6></small>
 </div>
 <div class="col-md-6">
-<h2>Contato</h2>
+<h4><center> Contato</center></h4>
 
-      <p><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
-Juazeiro do Norte, CE
-CEP.: 63010-465</p>
-      <p><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
+      <p style="font-size:100%"><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
+      Juazeiro do Norte, CE
+      CEP.: 63010-465</p>
+      <p style="font-size:100%"><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
+      <p style="font-size:100%"><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
 
 </div>
 </div>
