--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -24,7 +24,7 @@ p, ol, ul, td {
 
 </style>
 <div ng-controller="NavController as navVM">
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#007db7;border-color:white">
+    <nav ng-hide="navVM.sessao.nome==''" class="navbar navbar-inverse navbar-fixed-top" style="background-color:#007db7;border-color:white">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
