--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -37,26 +37,18 @@ p, ol, ul, td {
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#!/home/" style="background-color:white;color:blue">Inicio</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" style="color:white">Relatório <span class="caret"></span></a>
+                            <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Cadastro <span class="caret"></span></a>
+                            <ul class="dropdown-menu" style="background-color:#007db7">
+                                <li><a href="#!/cadastrarUser/" >Usuário</a></li>
+                                <li><a href="#!/cadastrarEvento/" >Evento</a></li>
+    
+                            </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href class="dropdown-toggle" data-toggle="dropdown" style="color:white">Relatório <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
                             <li><a  href="#!/listaUser/" >Usuários</a></li>
                             <li><a href="#!/listaEvento/" >Eventos</a></li>
-
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" style="color:white">Usuário <span class="caret"></span></a>
-                        <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a href="#!/cadastrarUser/" >Cadastrar Usuário</a></li>
-                            <li><a href="#!/editUser/" >Editar Usuário</a></li>
-
-                        </ul>
-                    </li>
-                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" style="color:white">Evento <span class="caret"></span></a>
-                        <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a href="#!/cadastrarEvento/" >Cadastrar Evento</a></li>
-                            <li><a href="#!/editEvento/" >Editar Evento</a></li>
 
                         </ul>
                     </li>
@@ -66,9 +58,9 @@ p, ol, ul, td {
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li ng-hide="navVM.sessao.nome==''"><a ng-click="navVM.logzin()"><span class="glyphicon glyphicon-user" style="color:white"></span> {{navVM.sessao.nome}}</a></li>
-                    <li ng-show="navVM.sessao.nome==''"><a href="#!/login/"><span class="glyphicon glyphicon-log-in"style="color:white"></span> Entrar</a></li>
-                    <li ng-hide="navVM.sessao.nome==''"><a ng-click="navVM.sair()"><span class="glyphicon glyphicon-log-out"style="<color:white></color:white>"></span> Sair </a></li>
+                    <li ng-hide="navVM.sessao.nome==''"><a ><span class="glyphicon glyphicon-user" style="color:white"></span> <span style="color: white"> {{navVM.sessao.nome}} </span></a></li>
+                    <li ng-show="navVM.sessao.nome==''"><a href="#!/login/"><span class="glyphicon glyphicon-log-in"style="color: white"></span><span style="color: white"> Entrar </span></a></li>
+                    <li ng-hide="navVM.sessao.nome==''"><a href ng-click="navVM.sair()"><span class="glyphicon glyphicon-log-out"style="color: white"></span><span style="color: white"> Sair </span></a></li>
                 </ul>
             </div>
         </div>
