--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -4,7 +4,7 @@
     <br>
     <form name="vm.form" class="form-horizontal">
       <div class="form-group">
-        <div class="col-xs-9">
+        <div class="col-xs-9" style="position:relative;transform: translate(20%, 0%)">
           <input type="text" class="form-control" ng-change="vm.buscar()" ng-model="vm.busca" placeholder="Nome ou Número de Matrícula">
           <br>
           <label class="radio-inline">Buscar por </label>
