--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,34 +1,33 @@
-<body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%'>
+<body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%' style="background-color:#FCFFF7">
  <link rel="shortcut icon" type="image/x-icon" href="/home/nexti/Documentos/git/Ponto-Dinamico/app/assets/images/favicon.ico" />
  
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
-<footer class="footer-responsive">
+
+<footer class="footer-responsive" >
 <div class="footer-content">
-<div class="container" style="background-color:#eee;width:105.9%;transform: translate(-3%, 10%)" >
+<div class="container" style="background-color:#34113F;width:105.9%;transform: translate(-3%, 15.5%)" >
 <div class="row" >
 <div class="col-md-6">
-<img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
-<br>
-<br>
-<br>
-<br>
+<img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação"style="transform: translate(-2%, 10%)" >
+<small><h6 style="color:#FCFFF7"> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 
-<small><h6><center> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</center></h6></small>
+
 </div>
-<div class="col-md-6">
+<div class="col-md-6"style="color:#FCFFF7">
 <h4><center> Contato</center></h4>
 
-      <p style="font-size:100%"><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
+      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
       Juazeiro do Norte, CE
       CEP.: 63010-465</p>
-      <p style="font-size:100%"><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
-      <p style="font-size:100%"><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
+      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
+      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
 
 </div>
 </div>
 </div>
 </div>
 </footer>
+
 </body>
