--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,15 @@
  *= require_tree .
  *= require_self
  */
+
+tr{
+    width: 100% !important;
+}
+
+td{
+    word-wrap: break-word;
+}
+
+tbody>tr:first-child{
+    width: 100% !important;
+}
