Ajustando imagem do rodapé

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -10,9 +10,11 @@
 <div class="container" style="background-color:#34113F;width:105.9%;transform: translate(-3%, 15.5%)" >
 <div class="row" >
 <div class="col-md-6">
-<img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação"style="transform: translate(-2%, 10%)" >
+<div>
+<img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação"style="transform: translate(50%, 30%);width:150px" >
+<br>
 <small><h6 style="color:#FCFFF7"> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
-
+</div>
 
 </div>
 <div class="col-md-6"style="color:#FCFFF7">
