--- a/app/assets/javascripts/views/editarEvento/editEvento.html
+++ b/app/assets/javascripts/views/editarEvento/editEvento.html
@@ -32,10 +32,10 @@
     <input class="form-control" type="text" name="qr" ng-model="vm.evento.QR" disabled> <br>
 
     <label for="latitude"> <h4>Latitude</h4> </label>
-    <input class="form-control" type="text" ng-model="vm.evento.latitude"> <br>
+    <input class="form-control" type="text" ng-model="vm.evento.localizacao_lati"> <br>
 
     <label for="longitude"> <h4>Longitude</h4></label>
-    <input class="form-control" type="text" ng-model="vm.evento.longitude"> <br>
+    <input class="form-control" type="text" ng-model="vm.evento.localizacao_long"> <br>
 
     <br>
     <button class="btn btn-info" ng-click="vm.editEvento()" ng-disabled="vm.botao" style="background-color:#007db7">OK</button>
