--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -33,13 +33,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="active" ng-repeat="user in vm.users | filter:vm.filtro:strict">
+      <tr ng-repeat="user in vm.users | filter:vm.filtro:strict" ng-class="user.classe">
         <span style="width: max-content">
         <td>{{user.matricula}}</td>
         <td>{{user.nome}}</td>
         <td><a ui-sref="editUser({user: user})" type="button" class="btn btn-primary" style="color:white">editar</a></td>
         <td><a href="" type="button" class="btn btn-primary" style="color:white">informações</a></td>
-        <td><a ng-click="vm.relatorio(user.id)" type="button" class="btn btn-primary" style="color:white">relatório</a></td>
+        <td><a ng-click="vm.relatorio(user)" type="button" class="btn btn-primary" style="color:white">relatório</a></td>
         </span>
       </tr>
     </tbody>
@@ -58,11 +58,11 @@
     </thead>
     <tbody>
 
-      <tr class="active" ng-repeat="evento in vm.eventos">
+      <tr ng-repeat="evento in vm.eventos" ng-class="evento.classe">
         <td>{{evento.nome}}</td>
         <td>{{evento.data_inicio}}</td>
         <td>{{evento.data_fim}}</td>
-        <td><a ng-click="vm.listaPontos(evento.id)" type="button" class="btn btn-primary" style="color:white">pontos</a></td>
+        <td><a ng-click="vm.listaPontos(evento)" type="button" class="btn btn-primary" style="color:white">pontos</a></td>
         <td> </td>
       </tr>
 
@@ -85,7 +85,7 @@
         <td>{{ponto.data | date:"dd/MM/yyyy"}}</td>
         <td>{{ponto.hora_inicio}}</td>
         <td>{{ponto.hora_fim}}</td>
-        <td> </td>
+        <td>{{ponto.mensagem}}</td>
       </tr>
     </tbody>
   </table>
