Ajuste do rodapé (80%) / adição de botão / edição de input em eventos
Falta deixar o rodapé fixo no final no tamanho xm

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -70,7 +70,7 @@
         (Campo obrigatório)</span>
     </div>
     <label for="qr"> <h4>Imagem</h4> </label>
-    <input class="form-control" type="text" name="imagem" ng-model="vm.QR" required style="width:380px" >
+    <input class="form-control" type="text" name="imagem" ng-model="vm.Imagem" required style="width:380px" >
     <br>
     <button type="button" class="btn btn-primary" style="position:relative;transform:translate(235%,-150%)"><span class="		glyphicon glyphicon-camera"></span> Escolher Imagem </button> 
     <br>
