--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,32 +1,39 @@
-<body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%' style="background-color:#FCFFF7">
+<body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%' style="background-color:White; overflow-x: hidden ">
  <link rel="shortcut icon" type="image/x-icon" href="/home/nexti/Documentos/git/Ponto-Dinamico/app/assets/images/favicon.ico" />
  
   <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <ui-view></ui-view>
 
-<footer class="footer-responsive">
-<div class="footer-content">
-<div class="container" style="background-color:#34113F;width:105.9%;transform: translate(-3%, 10%)" >
-<div class="row" >
-<div class="col-md-6">
-<div>
+<footer class="footer-responsive " >
+<div class="footer-content" >
+<div class="container" style="background-color:#34113F;width:105.9%;transform: translate(-3%, 37.5%);height:120px" >
+<div class="row" style="height:120px " >
+<div class="col-md-6" style="height:120px">
+<div style="transform: translate(0%, -25%)">
 <img src="/assets/logotipo-nexti.png"  class="img-responsive" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação"style="transform: translate(50%, 30%);width:150px" >
 <br>
 <small><h6 style="color:#FCFFF7"> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
 </div>
 
 </div>
-<div class="col-md-6"style="color:#FCFFF7">
-<h4><center> Contato</center></h4>
 
-      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
+<div class="col-md-2"style="color:#FCFFF7;transform: translate(130%,0%);height:120px">
+<h6><center> Contato</center></h6>
+
+      <p style="font-size:80%;color:#FCFFF7;transform: translate(0%,-49%);height:50px"><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
       Juazeiro do Norte, CE
-      CEP.: 63010-465</p>
-      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
-      <p style="font-size:100%;color:#FCFFF7"><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
+      CEP.: 63010-465</p> 
 
 </div>
+<div class="col-md-2"style="color:#FCFFF7;height:120px">
+
+      <p style="font-size:80%;color:#FCFFF7;transform: translate(160%,-10%)"><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
+      <p style="font-size:80%;color:#FCFFF7;transform: translate(160%,-160%)"><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
+
+</div>
+
+
 </div>
 </div>
 </div>
