metododo deletar no botao

--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -41,7 +41,7 @@
           <td><a ui-sref="editEvento({evento: evento})" type="button" class="btn btn-primary" style="color:white">editar</a>            </td>
           <td><a href="" type="button" class="btn btn-primary" style="color:white">informações</a></td>
           <td><a ng-click="vm.relatorio(evento)" type="button" class="btn btn-primary" style="color:white">relatório</a></td>
-          <td><a ng-click="vm.relatorio(evento.id)" type="button" class="btn btn-danger" style="color:white">Excluir</a></td>
+          <td><a ng-click="vm.deletar(evento.id)" type="button" class="btn btn-danger" style="color:white">Excluir</a></td>
         </tr>
       </div>
     </tbody>
