--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -5,7 +5,7 @@
   <br>
   <ui-view></ui-view>
 
-<footer class="footer-responsive " >
+<footer class="footer-responsive naoimprimivel" >
 <div class="footer-content" >
 <div class="container" style="background-color:#34113F;width:105.9%;transform: translate(-3%, 37.5%);height:120px" >
 <div class="row" style="height:120px " >
